# gsl

debian/: Makefile.in.doc  README.Debian  changelog  control  libgsl-dev.install  libgsl-dev.links  libgsl-prof.install  libgsl25.install  libgsl25.postinst  libgsl25.shlibs  libgslcblas0.install  libgslcblas0.postinst  libgslcblas0.shlibs  notes  rules
debian/patches/: dont-disable-deprecated  dont-disable-deprecated.full  gsl-cblas-linkage  manual-page-correction  renamed-delete  reset-so-number  series
doc/: Makefile.am
