## Process this file with automake to produce Makefile.in

SUBDIRS = . examples

#info_TEXINFOS = gsl-ref.texi
noinst_TEXINFOS =

man_MANS = gsl.3 gsl-config.1 gsl-randist.1 gsl-histogram.1

figures =

rst_files =

static_files =

noinst_DATA =

EXTRA_DIST =

# pdf disabled, use postscript and ps2pdf
.PHONY: pdf
pdf:
